fix: z-index of header in overview page

--- a/src/overview/index.sass
+++ b/src/overview/index.sass
@@ -12,7 +12,7 @@
         position: sticky
         top: 0
         
-        z-index: 1
+        z-index: 10
         
         padding: 10px 20px
         
